# anaconda-packaging-dotfiles

./: .pre-commit-config.yaml  .pylintrc  .pytest.ini  LICENSE  Makefile  README.md  environment.yaml  pyproject.toml
.github/actions/setup-env/: action.yaml
.github/workflows/: ISSUE_TEMPLATE.md  ci.yaml
